@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*formtastic-3.0.0 (16 Sep 2014)
+
+  16 Sep 2014; Hans de Graaff <graaff@gentoo.org> +formtastic-3.0.0.ebuild:
+  Version bump.
+
 *formtastic-2.3.1 (11 Sep 2014)
 
   11 Sep 2014; Hans de Graaff <graaff@gentoo.org> +formtastic-2.3.1.ebuild:
